<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/app_name_txt"
      android:textSize="50sp"
      android:textStyle="bold"
      android:gravity="center"
      android:textColor="@color/black"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="20dp" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_box_txt"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <EditText
        android:id="@+id/pass_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_box_txt"/>

  </com.google.android.material.textfield.TextInputLayout>


  <Button
      android:id="@+id/login_btn"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:text="@string/login_btn_txt"/>

  <TextView
      android:id="@+id/sign_up_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:textSize="20dp"
      android:gravity="center"
      android:textColor="@color/purple_500"
      android:text="@string/signUp_btn_txt"/>

  </LinearLayout>